# gc_collector

./: CMakeLists.txt  README.md
src/: gc.cpp  gc.h  gc_impl.cpp  gc_impl.h
tests/: CMakeLists.txt  benchmark.cpp  test.cpp
